--- a/app/assets/stylesheets/layouts/navbar.scss
+++ b/app/assets/stylesheets/layouts/navbar.scss
@@ -1,5 +1,5 @@
 .navbar {
-    background-color: #fff;
+    background-color: #ffffff;
     border-bottom: 1px solid rgba(0, 0, 0, .0975);
     height: 77px;
     &__brand {
@@ -10,6 +10,7 @@
     &__mainLogo {
       background-repeat: no-repeat;
       background-image: image-url("logo.png");
+      background-size:10rem;
     }
     &-nav {
       & > li {
